--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center" href="index.html">
             <img src="img/imagem-logo.jpg" alt="Logo Vigor's Gamer" id="logo" class="me-2">
-            Vigor's Gamer
         </a>
         
         <!-- Dropdown Menu - Categorias -->
@@ -87,8 +86,7 @@
 <!-- Banner -->
 <div class="banner">
     <div class="container text-center">
-        <h1 class="titulo-principal">Bem-vindo à Vigor's Gamer</h1>
-        <p>Os melhores produtos para Gamers e PCs</p>
+        <h2 class="titulo-principal">Os melhores produtos para Gamers e PCs</h2>
         <button class="btn btn-primary">Ver Produtos</button>
     </div>
 </div>
