ajustes de hoje

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 
 <!-- Banner -->
 <div class="banner">
-    <div class="container text-center">
-        <h2 class="titulo-principal">Os melhores produtos para Gamers e PCs</h2>
+    <div class="container text-center"> <br> <br>
+        <h1 class="titulo-principal">Os melhores produtos para Gamers e PCs</h1>
         <button class="btn btn-primary">Ver Produtos</button>
     </div>
 </div>
